tests/nightly/function/compile_fail/extra_precondition.rs
use pre::pre;

#[pre("is bar")]
fn foo() {}

#[pre]
fn main() {
    #[assure("is bar", reason = "foo is bar")]
    #[assure("is baz", reason = "foo is baz")]
    foo()
}
